horario postado automatico

--- a/car-detail.html
+++ b/car-detail.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/media-queryes.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <title>ZenithStudios</title>
-</head>
-<body>
 
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/media-queryes.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <title>ZenithStudios</title>
+</head>
+
+
+<body>
   <header>
-   <div class="div__logo-zenith">
+    <div class="div__logo-zenith">
       <a href="homepage.html">
         <img src="assets/img/zenith-logo_letra.png" class="logo-zenith">
       </a>
@@ -29,7 +30,7 @@
       <button class="close-menu" id="closeMenu">
         <i class="bi bi-x-lg"></i>
       </button>
-      
+
       <a href="homepage.html#produtos-section" class="a-nav">Comprar</a>
       <a href="homepage.html" class="a-nav">Início</a>
       <!-- <a href="" class="a-nav">Vender</a> -->
@@ -40,157 +41,147 @@
     </nav>
   </header>
 
-  <body>
 
-    <main id="margin-top__detailsContainer">
-      <div class="details-container">
+  <main id="margin-top__detailsContainer">
+    <div class="details-container">
 
-        <!-- COLUNA ESQUERDA: GALERIA DE IMAGENS -->
-        <div class="details-gallery">
+      <!-- COLUNA ESQUERDA: GALERIA DE IMAGENS -->
+      <div class="details-gallery">
 
-          <!-- Miniaturas (Scroll vertical no Desktop, horizontal no Mobile) -->
-          <div class="image-thumbnails" id="imageThumbnails">
-            <img
-              src=""
-              alt="Vista Principal" class="active">
-            <img
-              src=""
-              alt="Interior Assentos">
-            <img
-              src=""
-              alt="Painel de Controle">
+        <!-- Miniaturas (Scroll vertical no Desktop, horizontal no Mobile) -->
+        <div class="image-thumbnails" id="imageThumbnails">
+          <img src="" alt="Vista Principal" class="active">
+          <img src="" alt="Interior Assentos">
+          <img src="" alt="Painel de Controle">
 
-          </div>
-        </div>
-
-        <!-- Imagem Principal -->
-        <div class="main-image-container">
-          <img
-            src=""
-            alt="Vista Principal do Carro" class="main-image" id="mainCarImage">
         </div>
       </div>
 
-      <!-- COLUNA DIREITA: INFORMAÇÕES E BOTÕES -->
-      <div class="details-info">
+      <!-- Imagem Principal -->
+      <div class="main-image-container">
+        <img src="" alt="Vista Principal do Carro" class="main-image" id="mainCarImage">
+      </div>
+    </div>
 
-        <div class="header-info">
-          <p style="color: #999; font-size: 0.9rem;">
-           TENHO QUE ARRUMAR ESSA PARTE PARA O VENDEDOR ADICIONAR O ANO DO CARRO E A QUANTOS DIAS
-             FOI ANUNCIADO (AUTOMATICO E EM TEMPO REAL) <br> ex: ano: 2023 | anunciado há: 23 dias (tempo real aq)
-          </p>
-          <h1 class="racing-sans-one-regular">bmw <span>i7</span></h1>
+    <!-- COLUNA DIREITA: INFORMAÇÕES E BOTÕES -->
+    <div class="details-info">
+
+      <div class="header-info">
+        <p style="color: #999; font-size: 0.9rem;">
+          ANUNCIO (AUTOMATICO E EM TEMPO REAL) <br> ex: postado há: 23 dias (tempo real aq)
+        </p>
+        <h1 class="racing-sans-one-regular"> <!--NOME MARCA--> <span> <!--NOME CARRO--> </span></h1>
+      </div>
+
+      <div class="price-tag">
+        <!-- aqui fica o preço dos carros -->
+      </div>
+
+      <div class="location">
+        <i class="bi bi-geo-alt-fill"></i>
+        <p> <!-- aqui fica a localizaçao do vendedor --> </p>
+      </div>
+
+      <div class="seller-info">
+        <i class="bi bi-person-circle"></i>
+        <p>
+          <!-- aqui fica quem é o vendedor (nome) -->
+        </p>
+      </div>
+
+
+
+      <div class="action-buttons">
+        <!-- <button class="button-padrao">Perguntar ao Vendedor</button> -->
+        <button class="whatsapp-button">
+          <i class="bi bi-whatsapp"></i>
+          Enviar WhatsApp
+        </button>
+      </div>
+
+      <!-- Modal WhatsApp -->
+      <div id="whatsappModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>Enviar mensagem ao vendedor</h2>
+          <form id="whatsappForm">
+            <label>Seu nome:</label>
+            <input type="text" name="nome" required>
+
+            <label>Oferta (R$):</label>
+            <input type="text" name="oferta">
+
+            <label>Perguntas sobre o carro:</label>
+            <textarea name="perguntas"></textarea>
+
+            <button type="submit">Enviar WhatsApp</button>
+          </form>
         </div>
+      </div>
 
-        <div class="price-tag">
-          <!-- aqui fica o preço dos carros -->
+      <div class="description-box">
+        <h3>Detalhes e Especificações</h3>
+        <p>
+          <!-- especificaçoes do carro, normalmente um texto maior -->
+          <br> <br>
+        </p>
+      </div>
+    </div>
+
+    <!-- ================================== Modal de Favoritos ======================= -->
+    <div id="favoritesModal" class="favorites-modal">
+      <div class="favorites-modal-content">
+        <div class="div-fixa__favoritos">
+          <span id="closeFavoritesModal" class="">&times;</span>
+          <h2>Meus Favoritos</h2>
         </div>
+        <div id="favoritesContainer" class="favorites-container"></div>
+      </div>
+    </div>
 
-        <div class="location">
-          <i class="bi bi-geo-alt-fill"></i>
-          <p> <!-- aqui fica a localizaçao do vendedor --> </p>
-        </div>
+    <footer id="suporte-footer">
+      <div class="footer-container">
 
-        <div class="seller-info">
-          <i class="bi bi-person-circle"></i>
-          <p> 
-            <!-- aqui fica quem é o vendedor (nome) -->
-          </p>
-        </div>
-
-
-
-        <div class="action-buttons">
-          <button class="button-padrao">Perguntar ao Vendedor</button>
-          <button class="whatsapp-button">
-            <i class="bi bi-whatsapp"></i>
-            Enviar WhatsApp
-          </button>
-        </div>
-
-        <!-- Modal WhatsApp -->
-        <div id="whatsappModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Enviar mensagem ao vendedor</h2>
-            <form id="whatsappForm">
-              <label>Seu nome:</label>
-              <input type="text" name="nome" required>
-
-              <label>Oferta (R$):</label>
-              <input type="text" name="oferta">
-
-              <label>Perguntas sobre o carro:</label>
-              <textarea name="perguntas"></textarea>
-
-              <button type="submit">Enviar WhatsApp</button>
-            </form>
-          </div>
-        </div>
-
-        <div class="description-box">
-          <h3>Detalhes e Especificações</h3>
+        <div class="footer-logo">
+          <img src="assets/img/zenith-logo_letra.png" alt="Zenith Studios Logo">
           <p>
-            <!-- especificaçoes do carro, normalmente um texto maior -->
-             <br> <br>
+            O destino de luxo para quem procura o extraordinário em mobilidade.
+            Exclusividade e performance sem igual.
           </p>
+
+          <div class="social-icons" style="margin-top: 20px;">
+            <a href="#" title="Instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" title="Facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" title="Whatsapp"><i class="bi bi-whatsapp"></i></a>
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <h4>Serviços</h4>
+          <ul>
+            <li><a href="homepage.html#produtos-section">Comprar Carro</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Empresa</h4>
+          <ul>
+            <li><a href="Sobrenos.html">Sobre Nós</a></li>
+            <li><a href="termos_uso.html">Termos de Uso</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-contact">
+          <h4>Contato</h4>
+          <p>Telefone: +55 61 9 4002-8922</p>
+          <p>Email: <a href="#" style="color: var(--primary-color);">contato@zenith.com</a></p>
         </div>
       </div>
 
-      <!-- ================================== Modal de Favoritos ======================= -->
-      <div id="favoritesModal" class="favorites-modal">
-        <div class="favorites-modal-content">
-          <div class="div-fixa__favoritos">
-            <span id="closeFavoritesModal" class="">&times;</span>
-            <h2>Meus Favoritos</h2>
-          </div>
-          <div id="favoritesContainer" class="favorites-container"></div>
-        </div>
+      <div class="footer-bottom">
+        &copy; 2024 Zenith Studios. Todos os direitos reservados.
       </div>
-
-      <footer id="suporte-footer">
-        <div class="footer-container">
-
-          <div class="footer-logo">
-            <img src="assets/img/zenith-logo_letra.png" alt="Zenith Studios Logo">
-            <p>
-              O destino de luxo para quem procura o extraordinário em mobilidade.
-              Exclusividade e performance sem igual.
-            </p>
-
-            <div class="social-icons" style="margin-top: 20px;">
-              <a href="#" title="Instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" title="Facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" title="Whatsapp"><i class="bi bi-whatsapp"></i></a>
-            </div>
-          </div>
-
-          <div class="footer-links">
-            <h4>Serviços</h4>
-            <ul>
-              <li><a href="homepage.html#produtos-section">Comprar Carro</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-links">
-            <h4>Empresa</h4>
-            <ul>
-              <li><a href="Sobrenos.html">Sobre Nós</a></li>
-              <li><a href="termos_uso.html">Termos de Uso</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-contact">
-            <h4>Contato</h4>
-            <p>Telefone: +55 61 9 4002-8922</p>
-            <p>Email: <a href="#" style="color: var(--primary-color);">contato@zenith.com</a></p>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          &copy; 2024 Zenith Studios. Todos os direitos reservados.
-        </div>
-      </footer>
+    </footer>
 
 
     <!-- Supabase -->
@@ -200,16 +191,15 @@
     <!-- Script da página -->
     <script src="assets/js/car-detail.js"></script>
 
-    
-<script src="assets/js/authCheck.js"></script>
-<!-- <script src="assets/js/slide.js"></script> -->
-<!-- <script src="assets/js/logout.js"></script> -->
-<!-- <script src="assets/js/homepage.js"></script> -->
-<script src="assets/js/favorites.js"></script>
-<script src="assets/js/hamburguer.js"></script>
-<script src="assets/js/filtro.js"></script>
-<script src="assets/js/toast.js"></script>
-<script src="assets/js/modal-whatsapp.js"></script>
-<!-- <script src="assets/js/perfil.js"></script> -->
+
+    <script src="assets/js/authCheck.js"></script>
+
+    <script src="assets/js/favorites.js"></script>
+    <script src="assets/js/hamburguer.js"></script>
+    <script src="assets/js/filtro.js"></script>
+    <script src="assets/js/toast.js"></script>
+    <script src="assets/js/modal-whatsapp.js"></script>
+    <!-- <script src="assets/js/perfil.js"></script> -->
 </body>
+
 </html>
